--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,11 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -32,3 +37,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+
+*storybook.log
+storybook-static
